--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     html {
       scroll-behavior: smooth;
     }
-    /* Custom gradients for smooth transitions */
+
 .bg-gradient-frame-1 {
   background: linear-gradient(to bottom, #f3e6fa 0%, #e1c7f7 100%);
 }
@@ -25,7 +25,7 @@
 .bg-gradient-frame-5 {
   background: linear-gradient(to bottom, #8147b8 0%, #f3e6fa 100%);
 }
-    /* Make sure sections cover the viewport */
+   
     section {
       min-height: 100vh;
     }
@@ -33,7 +33,7 @@
 </head>
 <body class="bg-purple-50">
 
-  <!-- Блок 1 - Добро пожаловать -->
+
   <section id="welcome" class="bg-gradient-frame-1 min-h-screen flex flex-col justify-between items-center text-purple-900 p-8">
     <div class="flex flex-col items-center">
       <h1 class="text-4xl md:text-5xl font-bold mb-4">Добро пожаловать!</h1>
@@ -48,7 +48,7 @@
           class="px-6 py-4 bg-purple-600 text-white text-center font-semibold rounded-xl shadow-md transform transition hover:scale-105 hover:bg-purple-700">Стоимость услуг на сервере</button>
       </nav>
     </div>
-    <!-- Панели внизу -->
+
     <div class="w-full mt-12 grid grid-cols-1 md:grid-cols-3 gap-4">
       <div class="bg-purple-400 rounded-xl p-4 flex flex-col items-center">
         <span class="font-semibold">Дизайнер сайта</span>
@@ -65,7 +65,7 @@
     </div>
   </section>
 
-  <!-- Блок 2 - Правила -->
+
   <section id="rules" class="bg-gradient-frame-2 flex flex-col justify-center items-center text-purple-900 p-8 transition-all duration-700 overflow-hidden">
     <h2 class="text-3xl md:text-5xl font-bold mb-8">Правила нашего сервера</h2>
     <p class="mb-6 text-center max-w-xl">
@@ -90,91 +90,223 @@
          Правила сообщества TeeFusion<br><br>
 
       <strong>1. Определения</strong><br>
-      1.1. TeeSports — игровое сообщество и серверное объединение для развития игровых модов в РФ.<br>
+      1.1. TeeFusion — игровое сообщество и серверное объединение для развития игровых модов в РФ.<br>
       1.2. Администрация — Zavo и ninekeem (основатели проекта).<br>
       1.3. Команда — все участники проекта.<br>
       1.4. Чат-мост — Telegram-канал для обратной связи, общения и новостей.<br><br>
 
       <strong>2. Общие правила</strong><br>
-      2.1. Подключаясь к серверам TeeSports, вы принимаете данные правила.<br>
-    2.2. Правила распространяются на серверы и социальные площадки: 
-Discord (https://discord.gg/SyYZj7xZYS), Telegram Чат-мост (https://t.me/TeeSports),Telegram TS-News (https://t.me/TeeSports_News) 
-(подключись чтобы быть в курсе новостей сообщества).<br>
-2.3. Администрация оставляет за собой право изменять правила без уведомления.<br>
-2.4. Решения Администрации и Команды окончательны, но могут быть обжалованы в теме "Feedback (https://t.me/TeeSports/2136093)".<br>
-2.5. Повторные нарушения ведут к усилению наказания, градации которого определяются индивидуально.<br>
-2.6. Будьте вежливы и уважительны к другим игрокам. <br>
-2.7. Вы можете внести вклад в развитие сообщества путём доната, спонсорства мероприятий и иной помощи в рамках ваших компетенций. Мы открыты к сотрудничеству и признательны игровому сообществу, которое нас поддерживает.<br><br>
+1. Общие положения<br>
+> 1.1 ▸ Присоединяясь к серверам или площадкам TeeFusion, вы автоматически
+соглашаетесь с правилами TeeFusion.<br>
 
-3. Поведение и использование чата, ника, тега.<br>
-3.1. Запрещены оскорбления, спам, флуд, токсичность, политические темы. Это также касается никнеймов и клан-тегов.<br>
-3.2. Запрещены затяжные конфликты и агрессивные дискуссии.<br>
-3.3. Запрещено выдавать себя за члена Команды TeeSports или использовать схожие никнеймы, вводящие в заблуждение.<br><br>
+> 1.2 ▸ Незнание правил не освобождает от ответственности.<br>
 
-4. Правила использования серверов<br>
-4.1. Запрещены вредоносные действия по отношению к серверам и сообществу.<br>
-4.2. Запрещены боты, читы и модификации, дающие преимущество и их реклама.<br>
-4.3. Запрещены ложные доносы на других игроков.<br>
-4.4. Запрещена несогласованная реклама.<br>
-4.5. Карты и моды являются собственностью сообщества TeeSports и их авторов.<br><br>
+> 1.3 ▸ Администрация вправе вносить корректировки в правила без предварительного
+уведомления.<br>
 
-5. Особенности геймплея<br>
-5.1. Запрещено необоснованное голосование на бан игроков.<br>
-5.2. Запрещено исключение игроков для удержания сервера.<br>
-5.3. Запрещено игнорировать концепцию геймплея мода и мешать команде.<br>
-5.4. Разрешены "Динамическая камера" и "Кемперство".<br><br>
+> 1.4 ▸ Администрация — это лица с ролями @⨯ Director/@⨯ Administrator на наших
+социальных площадках.<br>
+> - 1.4.1 ▸ Администрация отвечает за стратегическое развитие, техническую поддержку и
+формирование политики сообщества, обеспечивая стабильную работу и рост TeeFusion.<br>
 
-6. Наказания<br>
-6.1. Администрация вправе корректировать меры наказания индивидуально.<br>
-6.2. Нарушение правил чата и никнеймов (п. 3.1, 3.2):
-Предупреждение / мут / бан 5-120 минут.<br>
-6.3. Нарушение правил геймплея (п. 5.1, 5.2, 5.3):
-Предупреждение / бан 10-120 минут.<br>
-6.4. Попытка входа в RCON: 
-Бан 60 минут.<br>
-6.5. Несогласованная реклама (п. 4.4):
-Бан 5000 минут, при повторном нарушении - перманентный бан.<br>
-6.6. Имперсонация членов Команды (п. 3.3):
-Бан 3000 минут.<br>
-6.7. Читы, их реклама, использование ботов и ложные доносы (п. 4.2, 4.3):
-Бан 10 000 минут / перманентный + обнуление статистики.<br>
-6.8. Обход бана (VPN/Proxy):
-Бан 20 000 минут.<br>
-6.9. Вредоносные действия по отношению к сообществу (п. 4.1):
-Бан от 20000 до перманентного, лишение прав при их наличии.<br><br>
+> 1.5 ▸ Социальные площадки/платформы сообщества:
+Платформа<br>
+ > - [Discord](https://discord.com/invite/FX35krDP3a)<br>
+ > - [Telegram](https://t.me/TeeFusionTW)<br>
+ > - [TG News](https://t.me/TeeFusionNews)<br>
+ > - [Twitch](https://twitch.tv/teefusiontw)<br>
+ > - [YouTube](https://www.youtube.com/@TeeFusionCommunity)<br>
+ > - [Tik Tok](https://www.tiktok.com/@teefusiontw)<br>
 
-7. Обязанности и права модераторов<br>
-7.1. Модераторы обязаны быть объективны и вежливы.<br>
-7.2. Все действия модераторов должны быть обоснованы и задокументированы.<br><br>
+> 1.7 ▸ Решения администрации имеют приоритет над правилами и являются
+окончательными.<br>
 
-8. Связь с администрацией и жалобы<br>
-8.1. Сообщить о неполадках или предложениях можно в теме "Feedback (https://t.me/TeeSports/2136093)" в телеграмм-канале.<br>
-8.2. Жалобы на игроков и модерацию принимаются в теме "Feedback (https://t.me/TeeSports/2136093)" с приложением: <br>
-• своего и чужих ников, <br>
-• время, имя сервера, <br>
-• подробностями ситуации, <br>
-• логи/скриншоты, <br>
-• демо/видео.<br>
-8.3. В срочной ситуации можно "пингануть" модератора или администратора в игровом чате, написав его телеграм-тег (не относится к Ki-o) или телеграмм-канале TeeSports; злоупотребление запрещено.<br>
+> 1.8 ▸ Администрация открыта к предложениям по улучшению TeeFusion. Можно
+оставлять их на наших платформах.<br>
 
-      <strong>9. Технические особенности</strong><br>
-      9.1 Сервера сообщества имеют префикс TeeSports.<br>
-      9.2. Правила на арендованных серверах могут отличаться.<br>
-      9.3. На серверах установлен AntiVPN.<br><br>
+> 1.9 ▸ Запрещены дискриминация и негатив в отношении новичков. Мы стремимся
+создать простой и комфортный порог вхождения для всех.<br>
 
-      Ссылки:<br>
-      https://t.me/TeeFusionTW (подача тикетов и т.п)<br>
-      https://t.me/TeeFusionNews (новости).<br><br>
+> 1.10 ▸ Активные игроки, участвующие в жизни и развитии TeeFusion, могут быть
+поощрены игровыми бонусами и привилегиями.<br>
 
-9. Технические особенности<br>
-9.1 Сервера сообщества имеют префикс TeeSports.<br>
-9.2. Правила на арендованных серверах могут отличаться от правил сообщества (серверы Ki-o).<br>
-9.3. На серверах установлен AntiVPN.<br>
+> 1.11 ▸ TeeFusion объединяет амбициозных игроков, нацеленных на развитие. Любое
+негативное поведение является недопустимым.<br><br>
+
+2. Общие правила<br>
+> 2.1 ▸ Наказания выдаются в игре по системе, описанной ниже.
+Наказание:<br>
+ - Описание<br>
+Варн:<br>
+ - Предупреждение без ограничений.<br>
+
+Кик:<br>
+ - Однократное исключение с сервера.<br>
+
+Мут:<br>
+ - Временный запрет на общение в чате.<br>
+
+Бан:<br>
+ - Временное/бессрочное ограничение доступа к игровым серверам.<br><br>
+
+> 2.2 ▸ При повторных нарушениях срок и/или мера наказания могут быть увеличены.<br>
+
+> 2.3 ▸ Запрещено использовать или распространять любые методы обхода наказаний.<br>
+
+> 2.4 ▸ Каждое наказание можно обжаловать единожды.<br>
+
+> 2.5 ▸ Запрещены любые действия, которые могут причинить вред TeeFusion.  <br>
+Наказание ▸ перманентная блокировка на серверах и платформах TeeFusion.<br>
+
+> 2.6 ▸ Запрещена продажа чего-либо за реальные деньги. <br> 
+Наказание ▸ на усмотрение модерации.<br>
+
+> 2.7 ▸ Запрещены следующие категории никнеймов и клановых тэгов:<br>
+> - 2.7.1 ▸ Оскорбительные или провокационные.<br>
+> - 2.7.2 ▸ Совпадающие с никнеймами администрации/модерации.<br>
+> - 2.7.3 ▸ С расистскими, нацистскими элементами или символикой запрещённых
+организаций.<br>
+> - 2.7.4 ▸ Скопированные у других игроков без согласия.<br>
+> - 2.7.5 ▸ Содержащие рекламу сторонних ресурсов.<br>
+> - 2.7.6 ▸ Связанные с политикой или религией.<br>
+
+>Порядок наказаний ▸<br>
+>> * Устное предупреждение/кик;<br>
+>> * При игнорировании предупреждений — бан на 6 часов;<br>
+>> * Удаление запрещённого защищенного никнейма/запрещенного клан-тэга.<br>
+
+> 2.8 ▸ Нарушение признается тяжким, если оно имеет массовый или систематический
+характер, вовлекает других игроков в нарушение или распространяется на платформы
+TeeFusion.<br>
+> - 2.8.1 ▸ Для каждого нарушения критерии тяжести могут быть переопределены в
+соответствующем пункте.<br><br>
+
+3. Игровой процесс<br>
+> 3.1 ▸ Запрещены читы — модификации клиента или любое ПО, которое может
+предоставить нечестное преимущество в игре.<br>
+> - 3.1.1 ▸ Использование. <br> 
+Наказание ▸ Бан на 7 дней.<br>
+> - 3.1.2 ▸ Распространение. <br> 
+Наказание ▸ Бан на 14 дней.<br>
+
+> 3.4 ▸ Запрещено использование или распространение уязвимостей (багов клиента или
+сервера) для получения нечестного преимущества.  <br>
+Наказание ▸ Определяется модерацией.<br>
+
+> 3.5 ▸ Всегда сообщайте о найденных багах и уязвимостях администрации. <br> 
+Награда ▸ Бонусы или привилегии на усмотрение администрации.<br>
+
+> 3.6 ▸ Запрещено согласованное искусственное завышение прогресса (фарм).  <br>
+Наказание ▸ Обнуление прогресса.<br>
+
+> 3.7 ▸ Запрещено нарушать установленные игровые концепции.  <br>
+Наказание ▸ бан на 1 час.<br><br>
+
+4. Использование игрового чата<br>
+> 4.1 ▸ Запрещен спам:<br>
+> - 4.1.1 ▸ Избыток символов, загромождающих чат.  <br>
+Наказание ▸ Мут на 10 минут.<br>
+> - 4.1.2 ▸ Длинные бессмысленные сообщения.  <br>
+Наказание ▸ Мут на 5 минут.<br>
+
+> 4.2 ▸ Запрещен флуд:<br>
+> - 4.2.1 ▸ Многократная отправка (от 3-х раз в минуту) коротких идентичных или схожих
+сообщений.  <br>
+Наказание ▸ Мут на 5 минут.<br>
+> - 4.2.2 ▸ Многократное (от 2-х раз в минуту) дублирование больших идентичных или
+схожих сообщений.  <br>
+Наказание ▸ Мут на 15 минут.<br>
+
+> - > 4.3 ▸ Недопустимы любые негативные и вульгарные высказывания, в том числе
+уничижительные шутки или комментарии:<br>
+> - 4.3.1 ▸Оскорбления/провокации/непристойные высказывания. <br> 
+Наказание ▸ Мут на 10 минут, 30 минут при тяжком нарушении.<br>
+>> _Нарушение считается тяжким, если в сообщениях суммарно содержится два и более запрещенных высказывания._
+
+> - 4.3.2 ▸ Сообщения, содержащие негативные или дискриминационные высказывания в
+сторону личной жизни игрока или его близких.  <br>
+Наказание ▸ Мут на 2-4 часа, возможен бан до 8 часов при тяжком нарушении<br>
+> - 4.3.3▸ Систематические, навязчивые сообщения или внимание, нарушающие личные
+границы игрока (преследование, травля).<br>
+>> _Нарушением считается поведение, если оно соответствует следующим критериям:_ <br>
+>> - _Повторяющиеся сообщения игроку (≥ 2 раз) после просьбы прекратить или
+игнорирования адресатом.<br>
+Сообщения носят объективно провокационный характер (оценивается по контексту и
+реакции адресата).<br>
+В сообщениях прослеживается чёткая форма давления, нежелательное внимания или
+создание обосновнного дискомфорта (оценивается по контексту и реакции адресата)._  <br>
+Наказание ▸ Мут на 2-4 часа, возможен бан до 8 часов при тяжком нарушении.<br>
+
+> 4.4 ▸ Запрещён любой вред участникам:<br>
+> - 4.4.1 ▸ Клевета и любые другие попытки скомпрометировать.  <br>
+Наказание ▸Мут на 1 день, возможен бан на 3 дня при тяжком нарушении.<br>
+> - 4.4.2 ▸ Обман или ввод в заблуждение с целью причинения вреда или получения
+выгоды.  <br>
+Наказание ▸ Бан на 2 часа, возможен бан до 3 дней при тяжком нарушении.<br>
+
+> 4.5 ▸ Запрещены любые проявления расизма, нацизма, а также оскорбления религии и
+пропаганда запрещённых организаций.  <br>
+Наказание ▸ Мут на 2-4 часа, возможен бан до 8 часов при тяжком нарушении.<br>
+
+> 4.6 ▸ Запрещены любые политические и религиозные обсуждения.  <br>
+Наказание ▸ Мут на 1 час до 24 часов при тяжком нарушении.<br>
+
+> 4.7 ▸ Запрещено обсуждать действия модерации или администрации в
+неконструктивной форме.  <br>
+Наказание ▸ Мут от 1 часа до 24 часов при тяжком нарушении.<br>
+
+> 4.8 ▸ Запрещено выдавать себя за представителя модерации или администрации.  <br>
+Наказание ▸ Бан на 2 дня, бан на 7 дней при тяжком нарушении.<br>
+
+> 4.9 ▸ Запрещено распространять сторонние ресурсы без согласования.  <br>
+Наказание ▸ Мут на 6 часов, возможен бан на 7 д при тяжком нарушении.<br>
+
+> 4.10 ▸ Запрещено цитировать нарушающие правила сообщения.  <br>
+Наказание ▸ Приравнивается к нарушению в цитируемом тексте.<br>
+
+> 4.11 ▸ Запрещены прямые или косвенные угрозы в сторону личной жизни игроков.  <br>
+Наказание ▸ Мут на 7 дней, возможен перманентный бан при тяжком нарушении.<br>
+
+> 4.12▸ Запрещено распространять персональные данные или личную информацию
+игроков.  <br>
+Наказание ▸ Мут на 30 дней, возможен перманентный бан при тяжком нарушении.<br><br><br>
+
+
+Положения модерации
+
+> M.1 ▸ Список модерации и администрации можно посмотреть на следующем сайте - [Staff List](https://docs.google.com/spreadsheets/d/1eRseMuVU6iGJ2jGaNp9gk3_9ZImUqWHOEAOIEyHv3YI/edit?usp=sharing)<br>
+
+> M.2 ▸ Запрещено наказывать без оснований.   <br>
+Наказание ▸ Выговор, может последовать отстранение при тяжком нарушении.<br>
+
+> М.3 ▸ Модератор обязан назначать наказания объективно, исключая влияние симпатий
+или антипатий.  <br>
+Наказание ▸ выговор, может последовать предупреждение при тяжком нарушении.<br>
+
+> М.4 ▸ Факт нарушения требует фиксации доказательств и предоставления при
+необходимости <br>
+> - M.4.1 ▸ Любая внутренняя техническая информация не может быть предоставлена.  
+`Наказание ▸ При отсутствии доказательств или некорректно вынесенном наказании —
+выговор, при тяжком нарушении — предупреждение.`<br>
+
+> М.5 ▸ Запрещено любое разглашение внутренней технической информации игрокам.  <br>
+`Наказание ▸ Выговор или предупреждение при тяжком нарушении. В случае умышленной
+диверсии — перманентный бан на TeeFusion.`<br>
+
+> М.6 ▸ Модерация обязана поддерживать высокий стандарт поведения. Негативное
+поведение, включая оскорбления, провокации или нарушение правил, недопустимо.  <br>
+Наказание ▸ Выговор, при тяжком нарушении — предупреждение<br>
+
+> М.7 ▸ Запрещено использовать полномочия для получения преимущества или личной
+выгоды. <br>
+Наказание ▸ Выговор, при тяжком нарушении — предупреждение<br>
+
     </p>
     </div>
   </section>
 
-  <!-- Блок 4 - Администрация -->
+
   <section id="admins" class="bg-gradient-frame-3 flex flex-col justify-center items-center text-white p-8">
     <h2 class="text-3xl md:text-5xl font-bold mb-12">Наш состав администрации</h2>
 
@@ -199,7 +331,7 @@ Discord (https://discord.gg/SyYZj7xZYS), Telegram Чат-мост (https://t.me/
       </div>
     </div>
 
-    <!-- Администрация -->
+
     <h3 class="text-2xl font-bold mb-6">Администрация</h3>
     <div class="w-full max-w-4xl grid grid-cols-2 md:grid-cols-4 gap-6 mb-10">
       <div class="bg-purple-400 rounded-xl p-4 flex flex-col items-center">
@@ -220,7 +352,7 @@ Discord (https://discord.gg/SyYZj7xZYS), Telegram Чат-мост (https://t.me/
       </div>
     </div>
 
-    <!-- Модерация -->
+  
     <h3 class="text-2xl font-bold mb-6">Модерация</h3>
     <div class="w-full max-w-5xl grid grid-cols-2 md:grid-cols-4 gap-6">
       <div class="bg-purple-400 rounded-xl p-4 flex flex-col items-center">
@@ -250,7 +382,7 @@ Discord (https://discord.gg/SyYZj7xZYS), Telegram Чат-мост (https://t.me/
     </div>
   </section>
 
-  <!-- Скрипт toggleRules -->
+  
   <script>
     let isOpen = false;
     function toggleRules() {
@@ -269,20 +401,20 @@ Discord (https://discord.gg/SyYZj7xZYS), Telegram Чат-мост (https://t.me/
     }
   </script>
 
-  <!-- Блок 5 - Услуги -->
+
   <section id="services" class="bg-gradient-frame-4 w-full flex flex-col items-center justify-center py-16 px-4">
     <h2 class="text-3xl md:text-5xl font-bold mb-4 text-center text-purple-900">Прайс лист</h2>
     <p class="text-center mb-8 text-purple-800">За покупкой обращайтесь к <a href="https://t.me/Acistant" target="_blank" class="underline hover:text-purple-600 transition">t.me/Acistant</a></p>
 
-    <!-- VIP блок -->
+
     <div class="bg-purple-200 rounded-2xl shadow-lg p-6 mb-10 w-full max-w-md flex flex-col items-center">
       <h3 class="text-2xl font-semibold mb-4 text-purple-900">VIP</h3>
       <button class="mb-3 w-full bg-purple-500 hover:bg-purple-600 transition rounded-full py-2 text-white font-medium">VIP - 99 ₽</button>
       <button class="w-full bg-purple-500 hover:bg-purple-600 transition rounded-full py-2 text-white font-medium">VIP+ - 149 ₽</button>
     </div>
 
-    <!-- Покупка уровня -->
-    <h3 class="text-2xl font-bold mb-4 text-purple-900">Покупка уровня</h3>
+
+    <h3 class="text-2xl font-bold mb-4 text-purple-900">Покупка уровня (скидочные)</h3>
     <div class="bg-purple-200 rounded-2xl shadow-lg p-6 mb-10 w-full max-w-md">
       <ul class="space-y-2 text-center text-purple-900 font-medium">
         <li>Уровень 10 = 99 ₽</li>
@@ -298,8 +430,8 @@ Discord (https://discord.gg/SyYZj7xZYS), Telegram Чат-мост (https://t.me/
       </ul>
     </div>
 
-    <!-- Скидки -->
-    <h3 class="text-2xl font-bold mb-4 text-purple-900">↑Скидки↑</h3>
+
+    <h3 class="text-2xl font-bold mb-4 text-purple-900">Без скидок</h3>
     <div class="bg-purple-200 rounded-2xl shadow-lg p-6 w-full max-w-md">
       <ul class="space-y-2 text-center text-purple-900 font-medium">
         <li>Уровень 10 = 149 ₽</li>
