--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@ TeeFusion.<br>
         <a href="https://t.me/fakemonk" target="_blank" class="mt-2 px-4 py-2 bg-purple-600 rounded-full hover:bg-purple-700 transition">t.me/fakemonk</a>
       </div>
       <div class="bg-purple-400 rounded-xl p-4 flex flex-col items-center">
-        <span class="font-semibold">kinibik_off</span>
+        <span class="font-semibold">кiлiбiк_off</span>
         <a href="https://t.me/kilibik_off" target="_blank" class="mt-2 px-4 py-2 bg-purple-600 rounded-full hover:bg-purple-700 transition">t.me/kilibik_off</a>
       </div>
       <div class="bg-purple-400 rounded-xl p-4 flex flex-col items-center">
