--- a/index.html
+++ b/index.html
@@ -10,22 +10,16 @@
       scroll-behavior: smooth;
     }
 
-.bg-gradient-frame-1 {
-  background: linear-gradient(to bottom, #f3e6fa 0%, #e1c7f7 100%);
+.bg-gradient-frame-1 { background: linear-gradient(to bottom, #a884d2 0%, #b698e0 100%); 
 }
-.bg-gradient-frame-2 {
-  background: linear-gradient(to bottom, #e1c7f7 0%, #c69af6 100%);
+.bg-gradient-frame-2 { background: linear-gradient(to bottom, #b698e0 0%, #c6a7ea 100%); 
 }
-.bg-gradient-frame-3 {
-  background: linear-gradient(to bottom, #c69af6 0%, #a76de1 100%);
+.bg-gradient-frame-3 { background: linear-gradient(to bottom, #c6a7ea 0%, #d5b6f3 100%); 
+} 
+.bg-gradient-frame-4 { background: linear-gradient(to bottom, #d5b6f3 0%, #e4c6fb 100%); 
 }
-.bg-gradient-frame-4 {
-  background: linear-gradient(to bottom, #a76de1 0%, #8147b8 100%);
+.bg-gradient-frame-5 { background: linear-gradient(to bottom, #e4c6fb 0%, #f5ecff 100%); 
 }
-.bg-gradient-frame-5 {
-  background: linear-gradient(to bottom, #8147b8 0%, #f3e6fa 100%);
-}
-   
     section {
       min-height: 100vh;
     }
