--- a/index.html
+++ b/index.html
@@ -377,34 +377,33 @@ TeeFusion.<br>
     </div>
 
   
-    <h3 class="text-2xl font-bold mb-6">Модерация</h3>
-    <div class="w-full max-w-5xl grid grid-cols-2 md:grid-cols-4 gap-6">
-      <div class="bg-purple-400 rounded-xl p-4 flex flex-col items-center">
-        <span class="font-semibold">fear of women</span>
-        <a href="https://t.me/hostqwd" target="_blank" class="mt-2 px-4 py-2 bg-purple-600 rounded-full hover:bg-purple-700 transition">t.me/hostqwd</a>
-      </div>
-      <div class="bg-purple-400 rounded-xl p-4 flex flex-col items-center">
-        <span class="font-semibold">adrenachrome</span>
-        <a href="https://t.me/fakemonk" target="_blank" class="mt-2 px-4 py-2 bg-purple-600 rounded-full hover:bg-purple-700 transition">t.me/fakemonk</a>
-      </div>
-      <div class="bg-purple-400 rounded-xl p-4 flex flex-col items-center">
-        <span class="font-semibold">кiлiбiк_off</span>
-        <a href="https://t.me/kilibik_off" target="_blank" class="mt-2 px-4 py-2 bg-purple-600 rounded-full hover:bg-purple-700 transition">t.me/kilibik_off</a>
-      </div>
-      <div class="bg-purple-400 rounded-xl p-4 flex flex-col items-center">
-        <span class="font-semibold">Script1s</span>
-        <a href="https://t.me/scrip1sg0d" target="_blank" class="mt-2 px-4 py-2 bg-purple-600 rounded-full hover:bg-purple-700 transition">t.me/scrip1sg0d</a>
-      </div>
-      <div class="bg-purple-400 rounded-xl p-4 flex flex-col items-center">
-        <span class="font-semibold">MTG</span>
-        <a href="https://t.me/whyMTG" target="_blank" class="mt-2 px-4 py-2 bg-purple-600 rounded-full hover:bg-purple-700 transition">t.me/whyMTG</a>
-      </div>
-      <div class="bg-purple-400 rounded-xl p-4 flex flex-col items-center">
-        <span class="font-semibold">Meaningless</span>
-        <a href="https://t.me/razerceo" target="_blank" class="mt-2 px-4 py-2 bg-purple-600 rounded-full hover:bg-purple-700 transition">t.me/razerceo</a>
-      </div>
-    </div>
-  </section>
+   <h3 class="text-2xl font-bold mb-6">Модерация</h3>
+<div class="w-full max-w-5xl grid grid-cols-2 md:grid-cols-4 gap-6">
+  <div class="bg-purple-400 rounded-xl p-4 flex flex-col items-center">
+    <span class="font-semibold">fear of women</span>
+    <a href="https://t.me/hostqwd" target="_blank" class="mt-2 px-4 py-2 bg-purple-600 rounded-full hover:bg-purple-700 transition">t.me/hostqwd</a>
+  </div>
+  <div class="bg-purple-400 rounded-xl p-4 flex flex-col items-center">
+    <span class="font-semibold">adrenachrome</span>
+    <a href="https://t.me/fakemonk" target="_blank" class="mt-2 px-4 py-2 bg-purple-600 rounded-full hover:bg-purple-700 transition">t.me/fakemonk</a>
+  </div>
+  <div class="bg-purple-400 rounded-xl p-4 flex flex-col items-center">
+    <span class="font-semibold">кiлiбiк_off</span>
+    <a href="https://t.me/kilibik_off" target="_blank" class="mt-2 px-4 py-2 bg-purple-600 rounded-full hover:bg-purple-700 transition">t.me/kilibik_off</a>
+  </div>
+  <div class="bg-purple-400 rounded-xl p-4 flex flex-col items-center">
+    <span class="font-semibold">Script1s</span>
+    <a href="https://t.me/scrip1sg0d" target="_blank" class="mt-2 px-4 py-2 bg-purple-600 rounded-full hover:bg-purple-700 transition">t.me/scrip1sg0d</a>
+  </div>
+  <div class="bg-purple-400 rounded-xl p-4 flex flex-col items-center md:col-start-2">
+    <span class="font-semibold">MTG</span>
+    <a href="https://t.me/whyMTG" target="_blank" class="mt-2 px-4 py-2 bg-purple-600 rounded-full hover:bg-purple-700 transition">t.me/whyMTG</a>
+  </div>
+  <div class="bg-purple-400 rounded-xl p-4 flex flex-col items-center">
+    <span class="font-semibold">Meaningless</span>
+    <a href="https://t.me/razerceo" target="_blank" class="mt-2 px-4 py-2 bg-purple-600 rounded-full hover:bg-purple-700 transition">t.me/razerceo</a>
+  </div>
+</div>
 
   
   <script>
