--- a/index.html
+++ b/index.html
@@ -373,15 +373,15 @@ TeeFusion.<br>
       </div>
       <div class="panel rounded-xl p-4 flex flex-col items-center">
         <span class="font-semibold">Script1s</span>
-        <a href="https://t.me/scrip1sg0d" target="_blank" class="mt-2 px-4 py-2 bg-purple-600 rounded-full">t.me/scrip1sg0d</a>
+        <a href="https://t.me/scrip1s" target="_blank" class="mt-2 px-4 py-2 bg-purple-600 rounded-full">t.me/scrip1s</a>
       </div>
       <div class="panel rounded-xl p-4 flex flex-col items-center md:col-start-2">
         <span class="font-semibold">MTG</span>
-        <a href="https://t.me/whyMTG" target="_blank" class="mt-2 px-4 py-2 bg-purple-600 rounded-full">t.me/whyMTG</a>
+        <a href="https://t.me/i_glavniy_tut" target="_blank" class="mt-2 px-4 py-2 bg-purple-600 rounded-full">t.me/i_glavniy_tut</a>
       </div>
       <div class="panel rounded-xl p-4 flex flex-col items-center">
         <span class="font-semibold">Meaningless</span>
-        <a href="https://t.me/razerceo" target="_blank" class="mt-2 px-4 py-2 bg-purple-600 rounded-full">t.me/razerceo</a>
+        <a href="https://t.me/wowovv" target="_blank" class="mt-2 px-4 py-2 bg-purple-600 rounded-full">t.me/wowovv</a>
       </div>
     </div>
   </section>
