--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@ TeeFusion.<br>
       </div>
       <div class="panel rounded-xl p-4 flex flex-col items-center">
         <span class="font-semibold">adrenachrome</span>
-        <a href="https://t.me/fakemonk" target="_blank" class="mt-2 px-4 py-2 bg-purple-600 rounded-full">t.me/fakemonk</a>
+        <a href="https://t.me/wowovv" target="_blank" class="mt-2 px-4 py-2 bg-purple-600 rounded-full">t.me/wowovv</a>
       </div>
       <div class="panel rounded-xl p-4 flex flex-col items-center">
         <span class="font-semibold">кiлiбiк_off</span>
@@ -381,7 +381,7 @@ TeeFusion.<br>
       </div>
       <div class="panel rounded-xl p-4 flex flex-col items-center">
         <span class="font-semibold">Meaningless</span>
-        <a href="https://t.me/wowovv" target="_blank" class="mt-2 px-4 py-2 bg-purple-600 rounded-full">t.me/wowovv</a>
+        <a href="https://t.me/razerceo" target="_blank" class="mt-2 px-4 py-2 bg-purple-600 rounded-full">t.me/razerceo</a>
       </div>
     </div>
   </section>
